# NSU-parallel-programming

./: .gitignore  README.md
.github/workflows/: bash.yml  cmake.yml  makefile.yml  manual.yml  test_lab_1.yml  test_lab_2.yml  test_lab_3.yml  test_lab_4.yml  test_lab_5.yml
lab1/: CMakeLists.txt  Makefile  README.md  mpi_slae_1.c  mpi_slae_2.c
lab1/profiling/: mpi_slae_1.clog2
lab1/src/: Makefile  mpi_slae_1.c  mpi_slae_2.c  test.sh
lab2/: CMakeLists.txt  README.md
lab2/src/: Makefile  openmp_slae.c  openmp_slae_1.c  openmp_slae_2.c  openmp_slae_schedule.c  test.sh
lab3/: CMakeLists.txt  README.md
lab3/src/: Makefile  mpi_multiply.c
lab4/: CMakeLists.txt  README.md
lab4/src/: Makefile  mpi_jacobi.c  mpi_jacobi_1.c  mpi_jacobi_2.c  test.sh
lab5/: CMakeLists.txt  README.md  build.sh  run.sh  test.sh
lab5/include/: color.h  task.h  task_queue.h
lab5/scripts/: build.sh  get_time.sh  run.sh  test.sh
lab5/src/: main.c  task_queue.c
